# ChangeLog for media-libs/ilmbase
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/ilmbase/ChangeLog,v 1.31 2013/03/21 15:49:17 ssuominen Exp $

  21 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> ilmbase-2.0.0.ebuild,
  +files/ilmbase-2.0.0-underlinking.patch:
  Link libIlmThread against $(PTHREAD_LIBS) from m4/threads.m4 wrt #462494 by
  Julian Ospald and Daniel Scharrer

  21 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> ilmbase-2.0.0.ebuild:
  Don't use ucontext.h from libc with this release of IlmBase wrt #461594 by
  Viktor Yu. Kovalskiy and Tupone Alfredo because of toolchain incompabilities.

  12 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> ilmbase-2.0.0.ebuild:
  Use subslot 0/10 based on SONAME.

*ilmbase-2.0.0 (11 Mar 2013)

  11 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> +ilmbase-2.0.0.ebuild:
  Version bump.

  09 May 2012; Alexis Ballier <aballier@gentoo.org> ilmbase-1.0.2.ebuild:
  keyword ~amd64-fbsd

  06 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> ilmbase-1.0.2.ebuild:
  Stable for ppc64 wrt bug 277202

  08 Dec 2010; Jeroen Roovers <jer@gentoo.org> ilmbase-1.0.2.ebuild:
  Stable for PPC (bug #277202).

  04 Dec 2010; Raúl Porcel <armin76@gentoo.org> ilmbase-1.0.2.ebuild:
  alpha/ia64/sparc stable wrt #277202

  04 Dec 2010; Raúl Porcel <armin76@gentoo.org> ilmbase-1.0.1.ebuild,
  ilmbase-1.0.2.ebuild:
  Drop s390/sh

  26 Nov 2010; Christian Faulhammer <fauli@gentoo.org> ilmbase-1.0.2.ebuild:
  stable x86, security bug 277202

  26 Nov 2010; Markos Chandras <hwoarang@gentoo.org> ilmbase-1.0.2.ebuild:
  Stable on amd64 wrt bug #277202

  25 Nov 2010; Jeroen Roovers <jer@gentoo.org> ilmbase-1.0.2.ebuild:
  Stable for HPPA (bug #277202).

  24 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> ilmbase-1.0.2.ebuild,
  +files/ilmbase-1.0.2-gcc43.patch:
  Fix missing #include for memset.

*ilmbase-1.0.2 (24 Jul 2010)
