@@ -4,18 +4,20 @@ Hash: SHA256
 AUX openexr-1.7.0-gcc43.patch 235 SHA256 0a6399c2a78396847eefc718a08cc6cc34f3b0db1531b1e424b5f6627562de07 SHA512 a19adcf1a8dec253f8577f5905775ea56dc5d2de4edc454a71ec86fda8cadd10a31e473db2341a203ee49b22c5bb06d75b010077ad44766cdbaa9f56b5f6859c WHIRLPOOL e883cde38249a4662aa2e2cbbfd7ce86afe9b9950535c79319dc5a12652199cd269ac72c9f4788c6f755bc0f1806fab774d96f12a253b5e30ba41aa2febab177
 DIST openexr-1.7.0.tar.gz 13542910 SHA256 b68a2164d01bd028d15bd96af2704634a344e291dc7cc2019a662045d8c52ca4
 DIST openexr-2.0.0.tar.gz 23886229 SHA256 9e2cef76caf159263262b15b002b8b5717fd7e9e126009ad0ac7331bf45090af SHA512 42fe4b5f009384b6c51400061d522fd710e5ca97811e50b33206187f2c483035a3b32e036935eb3ac5ea149bdabcd7958e14d1442dd2312e010eb6a977d775cb WHIRLPOOL 6bb193c4bb213ea10689e72e604a129d800b36a4ebad250991faec30ee52c284ccf7bbfa4d362ccc788189b5622d757f56fef7f9698c333fef7e52d1db1d7ae0
+DIST openexr-2.0.1.tar.gz 12609335 SHA256 b9924d2f9d57376ff99234209231ad97a47f5cfebd18a5d0570db6d1a220685a SHA512 b35e3e795496f9d4a56352c907bcffef14ae062b189c4e1df35f3ab08c5e9abf829fa9149db3198d60088fa9633816650011e5f7871e07324801b95549d6695b WHIRLPOOL 6e07792d197c8b116653bb47b0514ae23e3e33d81b76b78932b224c5422c3821d8edb72d09567cd18e5e8b0204d3f15a2574daf03836839ed7dddea23cfb79cb
 EBUILD openexr-1.7.0.ebuild 1304 SHA256 680099964f9387a67db840a0a6e920598ba0839b908244a25ce3cf9822eec3ee SHA512 57041d2194a38cf2bd9b620b689a32d9ca8b66ae08decff91d74860819d5dbc549c82743642a8e05b3f0b996729696e2310a1079d29907dbb2e6046759e938b4 WHIRLPOOL e9524ab5b3f57dfbcbaede59ca52679d7b23743a4cab49ef87d1aeba6bffce42acf5d682fd93e31acdfb41887acf82ae88a2715758e3e2ee382bd09095b7b6d5
 EBUILD openexr-2.0.0.ebuild 1444 SHA256 46ec40d6d506f09d1864e03d93e51b81c43dcf8a779bdd918f16af2b36c9e995 SHA512 8be14cd5356d7f8627aa703e4247894f0ee82ca7d501fcabccec620f85621f27ff5389f122d74ec890eded337d64e78af1e29739c7fb1939db922d937cc2d4a1 WHIRLPOOL 82a4861af29ffdddaa4f9f8853c45478bdc81d04a0686a7df9c904b7fe29364ea3cd8ce8d502681c87ba056dde568e3e34e7f0549ae203abb96a8a302502b821
-MISC ChangeLog 11431 SHA256 78fb530d064e06516a0813f7c16cf82ce6b854fb9fcebf150abbfe128adb1dc4 SHA512 88dcbcb82accb13fc583613116b2065ecb6d8043f4be72a90fecc1d001465c76fb4a14645bdfaba54db5ce4e7e111ee5397d0807d4f0e0d28bf63120c76aad40 WHIRLPOOL b3ececf5b5040ebd385b0638775819dd1cf071b0144ee75ba9b9e537d4e58c96aa5fa2b97e45ba57bf619a3fb573dc399cf41acf361c7b688716e673423829e1
+EBUILD openexr-2.0.1.ebuild 1210 SHA256 6e17b1e11e9acff9be104dfd959ad8fdb5b6cdaf912c99e3fc3aed3924f6dd30 SHA512 ba50efaed16846994f3871866acd548b2df3a49014b0e8452665255c027314b89dd279b429e41a1b6900598ee75c13aeb46885fb834102d2cbcfcde0194ee5dd WHIRLPOOL 40085dbecf3d3bce9fd9a1063d6bd79cfaad0eff986203600ea70bbc04db8e740ee5a666d6cba9011b41aa2c280c9db37a6db9c921c3266cf2cf1854b96d2daf
+MISC ChangeLog 11554 SHA256 4b4dea48f20785f8ea55c28580a1980e8f4c50f9cdd1efbbef52a16957e40940 SHA512 ac49b0babb2d512f1f6bb4bcf22a1b6b8d233f3a6ab6805e2866f7dd50a3e210e707f8770fa2a5122efcdf15a2288d834869a3eefb78dcf8a40b58b7f2a7a86d WHIRLPOOL 11d4a52855cebcd5ab4ea69ec8a8787fe77ea3e2ebff3c2012d53e11f83ce6aef3cd07c0fb24f960faf6e4aad43a78ff1ffb0ac301d08bc35b5a9e44a3330f2a
 MISC metadata.xml 223 SHA256 dd48e823ec9a151bc3611121402ed26ee24eb3304aa62870b1e875a8fa0ac812 SHA512 cacba929b8688a7270637f34d348216fdeb89e725cdee4b40e5577ca3f626c5f72e73c1c125605a284506aff47265f41e3fedaa76ed4074c540fc1f200e6d494 WHIRLPOOL dcd04d57abcfe2704036097ed68500917f74b7024b46580e9054e1c933d55678992c350fe07ff0efd590b9345fbcdd81665b8ce546f786dd31f5a0f4eb654da3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRPtNEAAoJEEdUh39IaPFNFpAIAJDqquxfvxiFuAuGYcueIzyr
-1ipC33D74W2AXucvdZ0sEwMi3/UonKK+o2cpXHAbBa7E1iDulOH/jclb7fRdKTBv
-GkTt6jS3X9hPIHtzPN7g9f9HaeOAX+cXjlenSiFs1FOWcCfKvoZkR8rywY8m6ByS
-daQsGrmkQ/DWGZIKevmAFJur2jP0Huu5zWPzRSzyVpZDGrTArLnVxL04/hwXchMe
-xihM/XbSBxLNhezN1WXq99yQrUcQhmMrN9kZQq0DXCCuQHjLynTv/GJO2ecsD7xF
-6LcGcvE7CGZoNajifD0vRg0+eUY3hdxQ3yqxwckYF42FAFH9Q5p9AmFLFA/Pg6I=
-=j0ey
+iQEcBAEBCAAGBQJR7kzPAAoJEEdUh39IaPFNj1QH/0t9dCS/pzHtltqvpopPGlG+
+VBRfX5RfhZjP3qs55tpSUnUswWJ9M+OJv4woKsZzHKgmYx59x5aGgAgfQpAXKDcK
+yPepE1OR1xbSPoYo7JIwzQa8Rof4sPT19cmEgLNjUW+pp856jfdrRiqod6oiWT8t
+YTTWveVcRRQZZKdV2y2IFZMBj5sNho8EqfFJUcpIRski/7Edjw/TdQvo0vzcvR94
+ZSfGzoIOsiqKxjj4JJ4Eo9T86WEcYQsQ6M799A20lEma7aEcNA6hqoxGRsTAKMjN
+DvHj9UzASJVaOQssrNSrzug/idM0KIU/FmlRvC2t9iP//kz449qCtq9Ypk9D6fo=
+=sASO
 -----END PGP SIGNATURE-----
