@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/ilmbase
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/ilmbase/ChangeLog,v 1.31 2013/03/21 15:49:17 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/ilmbase/ChangeLog,v 1.32 2013/07/23 09:28:52 ssuominen Exp $
+
+*ilmbase-2.0.1 (23 Jul 2013)
+
+  23 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> +ilmbase-2.0.1.ebuild:
+  Version bump.
 
   21 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> ilmbase-2.0.0.ebuild,
   +files/ilmbase-2.0.0-underlinking.patch:
@@ -110,4 +115,3 @@
   +files/ilmbase-1.0.0-asneeded.patch, +metadata.xml, +ilmbase-1.0.0.ebuild:
   Initial import, split of media-libs/openexr, thanks to : Arfrever Frehtes
   Taifersar Arahesis <Arfrever.FTA@GMail.Com> for the ebuilds, bug #189798
-
